feat: Added more documentation

--- a/configs/netflix.strangerthings.conf
+++ b/configs/netflix.strangerthings.conf
@@ -1,3 +1,5 @@
+# This location block redirects a request to a random episode of the show 'Stranger Things'
+# https://www.imdb.com/title/tt4574334/
 location /netflix/strangerthings {
   content_by_lua_block {
     math.randomseed(ngx.now()*1000)
