--- a/configs/netflix.seinfeld.conf
+++ b/configs/netflix.seinfeld.conf
@@ -1,3 +1,5 @@
+# This location block redirects a request to a random episode of the show 'Seinfeld'
+# https://www.imdb.com/title/tt0098904/
 location /netflix/seinfeld {
   content_by_lua_block {
     math.randomseed(ngx.now()*1000)
