--- a/configs/netflix.conf
+++ b/configs/netflix.conf
@@ -7,7 +7,8 @@ location /netflix {
     local base_url = "/netflix/"
     local shows = {
       "seinfeld",
-      "strangerthings"
+      "strangerthings",
+      "breakingbad",
     }
     local random_show = shows[math.random(1, #shows)]
 
