feat: Add Better Call Saul to configs

--- a/configs/netflix.conf
+++ b/configs/netflix.conf
@@ -9,6 +9,7 @@ location /netflix {
       "seinfeld",
       "strangerthings",
       "breakingbad",
+      "bettercallsaul",
     }
     local random_show = shows[math.random(1, #shows)]
 
