--- a/configs/netflix.conf
+++ b/configs/netflix.conf
@@ -10,6 +10,7 @@ location /netflix {
       "strangerthings",
       "breakingbad",
       "bettercallsaul",
+      "greysanatomy",
     }
     local random_show = shows[math.random(1, #shows)]
 
