feat: Added an index file and static assets

--- a/nginx.conf
+++ b/nginx.conf
@@ -27,6 +27,13 @@ http {
 
     server_name _;
 
+    location / {
+      default_type "text/html";
+      root /usr/share/nginx/html;
+
+      try_files  /$uri /$uri.html /index.html;
+    }
+
     include configs/*.conf;
   }
 }
