--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./configs:/etc/nginx/configs:ro
+      - ./static:/usr/share/nginx/html/:ro
     healthcheck:
       test: ['CMD', 'curl --fail http://localhost/ || exit 1']
       interval: 30s
