--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -9,9 +9,6 @@ events {
 }
 
 http {
-  include       /etc/nginx/mime.types;
-  default_type  application/octet-stream;
-
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
@@ -27,13 +24,15 @@ http {
 
     server_name _;
 
-    location / {
-      default_type "text/html";
-      root /usr/share/nginx/html;
+    default_type "text/html";
+    root /usr/share/nginx/html;
+    try_files  /$uri /$uri.html /index.html;
+  
+    location ~ ^/random/(.+)$ {
+      default_type text/plain;
 
-      try_files  /$uri /$uri.html /index.html;
+      set $service_series $1;
+      content_by_lua_file handler.lua;
     }
-
-    include configs/*.conf;
   }
 }
