--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -9,6 +9,8 @@ events {
 }
 
 http {
+  include mime.types;
+
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
@@ -24,9 +26,10 @@ http {
 
     server_name _;
 
-    default_type "text/html";
-    root /usr/share/nginx/html;
-    try_files  /$uri /$uri.html /index.html;
+    location / {
+      root /usr/share/nginx/html;
+      try_files $uri $uri/ $uri.html =404;
+    }
   
     location ~ ^/random/(.+)$ {
       default_type text/plain;
