feat: Enable 1d caching for static content

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -27,6 +27,8 @@ http {
     server_name _;
 
     location / {
+      expires 1d;
+
       root /usr/share/nginx/html;
       try_files $uri $uri/ $uri.html =404;
     }
