feat: Generate front page with php

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -10,6 +10,7 @@ events {
 
 http {
   include mime.types;
+  include fastcgi_params;
 
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
@@ -26,7 +27,7 @@ http {
 
     server_name _;
 
-    location / {
+    location ~ ^.+\.(gif|jpg|png|jpeg|html|css)$ {
       expires 1d;
 
       root /usr/share/nginx/html;
@@ -38,6 +39,11 @@ http {
 
       set $service_series $1;
       content_by_lua_file handler.lua;
+    }
+
+    location / {
+        fastcgi_pass  php:9000;
+        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/index.php;
     }
   }
 }
