4 dynamic front front page (#8)
* feat: Generate front page with php and add metadata info to shows

--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -27,6 +27,12 @@ http {
     server_name _;
 
     location / {
+      include fastcgi_params;
+      fastcgi_pass  php:9000;
+      fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/index.php;
+    }
+
+    location ~ ^.+\.(gif|jpg|png|jpeg|html|css)$ {
       expires 1d;
 
       root /usr/share/nginx/html;
