--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,8 +4,20 @@ on:
     branches:
       - main
 jobs:
+  Lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.20
+      - name: Lint episodes
+        run: make lint
   Deploy:
     runs-on: ubuntu-latest
+    needs: Lint
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
