--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -24,5 +24,5 @@
 
     - name: Start nginx-random-redirect
       ansible.builtin.shell:
-        cmd: docker compose -f docker-compose.tls.yaml up -d
+        cmd: docker compose -f docker-compose.prod.yaml up -d
         chdir: /home/ubuntu/nginx-random-episode
