feat: Fix sops and prometheus volume mount

--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -17,10 +17,8 @@
 
     - name: Decrypt the configs/prometheus-remote-write.yaml file and attach configuration to configs/prometheus.yaml
       ansible.builtin.shell:
-        cmd: 'sops -d --age $(cat $SOPS_AGE_KEY_FILE | grep -oP "public key: \(.*\)") configs/prometheus-remote-write.yaml >> configs/prometheus.yaml'
+        cmd: 'SOPS_AGE_KEY_FILE=/home/ubuntu/.sops/ci-key.txt sops -d configs/prometheus-remote-write.yaml >> configs/prometheus.yaml'
         chdir: /home/ubuntu/nginx-random-episode
-      environment:
-        SOPS_AGE_KEY_FILE: /home/ubuntu/.sops/ci-key.txt
 
     # Shut down server in case it's already running
     - name: Stop nginx-random-redirect
